--- a/page-price-list.html
+++ b/page-price-list.html
@@ -229,95 +229,103 @@
         </div>
       </div>
       <div class="container-content">
-        <table id="example2" class="table table-bordered table-hover dataTable dtr-inline"
-          aria-describedby="example2_info">
+        <table id="example2" class="price-list" aria-describedby="example2_info">
           <thead>
             <tr>
-              <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                aria-label="Rendering engine: activate to sort column ascending">Rendering engine</th>
-              <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                aria-label="Browser: activate to sort column ascending">Browser</th>
-              <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                aria-label="Platform(s): activate to sort column ascending">Platform(s)</th>
-              <th class="sorting sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                aria-label="Engine version: activate to sort column ascending" aria-sort="descending">Engine
-                version</th>
-              <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                aria-label="CSS grade: activate to sort column ascending">CSS grade</th>
+              <th width="1.509434%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="Rendering engine: activate to sort column ascending"></th>
+              <th width="2.54717%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="Rendering engine: activate to sort column ascending">№</th>
+              <th width="3.018868%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="Browser: activate to sort column ascending">Катег.</th>
+              <th width="4.716981%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="Platform(s): activate to sort column ascending">Арт.</th>
+              <th width="62.54717%" class="sorting sorting_desc" tabindex="0" aria-controls="example2" rowspan="1"
+                colspan="1" aria-label="Engine version: activate to sort column ascending" aria-sort="descending">Имя
+              </th>
+              <th width="5.283019%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="CSS grade: activate to sort column ascending">Ед.изм</th>
+              <th width="7.54717%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="CSS grade: activate to sort column ascending">Цена р.</th>
+              <th width="2.264151%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="CSS grade: activate to sort column ascending"></th>
             </tr>
           </thead>
           <tbody>
             <tr class="odd">
-              <td class="dtr-control" tabindex="0">Мат</td>
-              <td>Safari 3.0</td>
-              <td class="">OSX.4+</td>
-              <td class="sorting_1">522.1</td>
-              <td>A</td>
+              <td><label class=" checkbox">
+                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+                </label></td>
+              <td class="dtr-control" tabindex="0">1</td>
+              <td><span class="_mat-category">Мат</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Доски струганые половые</td>
+              <td>метры</td>
+              <td>10</td>
+              <td><button type=" button" class=" btn-del-small"></button></td>
             </tr>
             <tr class="even">
-              <td class="dtr-control" tabindex="0">Мех
+              <td><label class=" checkbox">
+                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+                </label></td>
+              <td class="dtr-control" tabindex="0">2
               </td>
-              <td>iPod Touch / iPhone</td>
-              <td class="">iPod</td>
-              <td class="sorting_1">420.1</td>
-              <td>A</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01132</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>20</td>
+              <td><button type=" button" class=" btn-del-small"></button></td>
             </tr>
             <tr class="odd">
-              <td class="dtr-control" tabindex="0">Мат</td>
-              <td>OmniWeb 5.5</td>
-              <td class="">OSX.4+</td>
-              <td class="sorting_1">420</td>
-              <td>A</td>
+              <td><label class=" checkbox">
+                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+                </label></td>
+              <td class="dtr-control" tabindex="0">3</td>
+              <td><span class="_meh-category">Мех</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Циклевальная машина</td>
+              <td>метры</td>
+              <td>40</td>
+              <td><button type=" button" class=" btn-del-small"></button></td>
             </tr>
             <tr class="even">
-              <td class="dtr-control" tabindex="0">Раб</td>
-              <td>Safari 2.0</td>
-              <td class="">OSX.4+</td>
-              <td class="sorting_1">419.3</td>
-              <td>A</td>
+              <td><label class=" checkbox">
+                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+                </label></td>
+              <td class="dtr-control" tabindex="0">4</td>
+              <td><span class="_doc-category">
+                  Док
+                </span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Грузовая газель</td>
+              <td>метры</td>
+              <td>50</td>
+              <td><button type=" button" class=" btn-del-small"></button></td>
             </tr>
             <tr class="odd">
-              <td class="dtr-control" tabindex="0">Мат</td>
-              <td>S60</td>
-              <td class="">S60</td>
-              <td class="sorting_1">413</td>
-              <td>A</td>
+              <td><label class=" checkbox">
+                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+                </label></td>
+              <td class="dtr-control" tabindex="0">5</td>
+              <td><span class="_mat-category">Мат</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Доски струганые половые</td>
+              <td>метры</td>
+              <td>60</td>
+              <td><button type=" button" class=" btn-del-small"></button></td>
             </tr>
             <tr class="even">
-              <td class="dtr-control" tabindex="0">Раб</td>
-              <td>Safari 1.3</td>
-              <td class="">OSX.3</td>
-              <td class="sorting_1">312.8</td>
-              <td>A</td>
-            </tr>
-            <tr class="odd">
-              <td class="dtr-control" tabindex="0">Мат</td>
-              <td>Safari 1.2</td>
-              <td class="">OSX.3</td>
-              <td class="sorting_1">125.5</td>
-              <td>A</td>
-            </tr>
-            <tr class="even">
-              <td class="dtr-control">Мех
-              </td>
-              <td>Nintendo DS browser</td>
-              <td class="">Nintendo DS</td>
-              <td class="sorting_1">8.5</td>
-              <td>C/A<sup>1</sup></td>
-            </tr>
-            <tr class="odd">
-              <td class="dtr-control" tabindex="0">Раб</td>
-              <td>Internet Explorer 7</td>
-              <td class="">Win XP SP2+</td>
-              <td class="sorting_1">7</td>
-              <td>A</td>
-            </tr>
-            <tr class="even">
-              <td class="dtr-control" tabindex="0">Мат</td>
-              <td>AOL browser (AOL desktop)</td>
-              <td class="">Win XP</td>
-              <td class="sorting_1">6</td>
-              <td>A</td>
+              <td><label class=" checkbox">
+                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+                </label></td>
+              <td class="dtr-control" tabindex="0">6</td>
+              <td><span class="_rab-category">Раб</span></td>
+              <td class="">01232</td>
+              <td class="sorting_1">Монтаж теплого пола</td>
+              <td>метры</td>
+              <td>100</td>
+              <td><button type=" button" class=" btn-del-small"></button></td>
             </tr>
           </tbody>
 
@@ -386,11 +394,11 @@
 
       }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
       $('#example2').DataTable({
-        "paging": true,
+        "paging": false,
         "lengthChange": false,
-        "searching": false,
+        "searching": true,
         "ordering": true,
-        "info": true,
+        "info": false,
         "autoWidth": false,
         "responsive": true,
       });
