--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -98,7 +98,7 @@
 		</aside>
 		<!-- Конец главгый сайдбар -->
 
-		<div class="content-wrapper p-4 tooltip-margin-bottom">
+		<div class="content-wrapper p-4 ">
 			<h1 class="big-title">Создать шаблон</h1>
 
 			<div class="container-content" data-select2-id="14">
@@ -154,8 +154,9 @@
 											name="checkbox-smeta" onchange="showBulkActionBar()">
 									</label>
 									<div class="accordion__header-content">
-										<div class="accordion__name" onclick='editTextInput(event)'><input type="text"
-												data-edit-input onblur="saveTextInput(event)" class="input-default"></div>
+										<div class="accordion__name" onclick='editTextInput(event)'
+											data-name='Наименование сметы'><input type="text" data-edit-input
+												onblur="saveTextInput(event)" class="input-default"></div>
 										<div class="accordion__select ">
 											<label class="accordion__name-select">Статус</label>
 											<div class="select-status">
@@ -181,7 +182,7 @@
 
 								<div class="accordion__body card-body">
 									<!-- Этапы работы -->
-									<ul class="todo-list  overflow-hidden mt-3" data-stages data-widget="todo-list">
+									<ul class="todo-list   mt-3" data-stages data-widget="todo-list">
 
 									</ul>
 
@@ -195,7 +196,8 @@
 							<button type="button" class="butt-plus" onclick="creatingStages(event)"
 								data-create-stage><span>Этап
 									работ</span></button>
-							<span class="footer-list__sum">Итого по смете: <span data-sum>0</span> р.</span>
+							<span class="footer-list__sum">Итого по смете: <span data-sum data-name='Итого по смете'>0</span>
+								р.</span>
 						</div>
 						<div class="mt-3">
 							<label class="very-small-title"> Комментарий</label>
@@ -207,7 +209,13 @@
 			</ul>
 
 
-
+			<div class="bulkActionBar container-content">
+				<button type="submit" class="butt-success " data-toggle="dropdown" aria-expanded="false">Экспортировать
+				</button>
+				<button class="butt">Обновить цены</button>
+				<button class="butt bg-gradient-danger" onclick="deleteSelectedItems()">Удалить выброное</button>
+				<div>Кол-во выбраных: <span data-selected-count>0</span></div>
+			</div>
 		</div>
 
 	</div>
